--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.1",
     "sass-loader": "^4.0.2",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
